Update Video Streaming Applications and Operators (#1203)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Updates**
* Renamed client/server components and Python bindings to
VideoStreamingClient / VideoStreamingServer across demos, docs, and CLI
examples; default server mode now uses the C++ variant.
* App/demo commands and config paths updated to new names and locations.

* **New Features**
* Added explicit C++ demo modes (server_cpp, client_cpp_v4l2,
client_cpp_replayer) and structured multi-mode metadata.

* **Improvements**
* Enhanced integration tests, logging, and test reporting; clarified
CUDA 12.x guidance and documentation navigation.
* **Metadata**
* Added V4L2 and Bidirectional tags and increased application rankings.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/video_streaming/video_streaming_client/cpp/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/cpp/CMakeLists.txt
@@ -2,9 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 cmake_minimum_required(VERSION 3.20)
-project(streaming_client_demo CXX)
-
-# This application is built by the parent add_holohub_application macro
+project(video_streaming_client_demo_cpp CXX)
 
 find_package(holoscan 3.5 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
@@ -22,67 +20,67 @@ else()
 endif()
 
 # Find the streaming client operator directory using relative path
-set(OPERATOR_CLIENT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../../operators/video_streaming/streaming_client_enhanced/holoscan_client_cloud_streaming/lib/${ARCH_DIR}")
+set(OPERATOR_CLIENT_DIR "${CMAKE_SOURCE_DIR}/operators/video_streaming/video_streaming_client/holoscan_client_cloud_streaming/lib/${ARCH_DIR}")
 
 # Validate operator bundle exists - fail early with clear error message
 if(NOT EXISTS "${OPERATOR_CLIENT_DIR}")
   message(FATAL_ERROR "Operator client directory not found: ${OPERATOR_CLIENT_DIR}\n"
                       "Please ensure NGC assets are installed per README:\n"
-                      "  cd operators/video_streaming/streaming_client_enhanced\n"
+                      "  cd operators/video_streaming/video_streaming_client\n"
                       "  ngc registry resource download-version \"nvidia/holoscan_client_cloud_streaming:0.2\"\n"
                       "  unzip holoscan_client_cloud_streaming_v0.2/holoscan_client_cloud_streaming.zip -d holoscan_client_cloud_streaming")
 endif()
 
-add_executable(streaming_client_demo
-  streaming_client_demo.cpp
+add_executable(video_streaming_client_demo_cpp
+  video_streaming_client_demo.cpp
 )
 
-target_link_libraries(streaming_client_demo
+target_link_libraries(video_streaming_client_demo_cpp
   PRIVATE
   holoscan::core
   holoscan::ops::holoviz
   holoscan::ops::video_stream_replayer
   holoscan::ops::v4l2
   holoscan::ops::format_converter
-  holoscan::ops::streaming_client_enhanced
+  holoscan::ops::video_streaming_client
   holoscan::data_loggers::basic_console_logger
   CUDA::cudart
   CUDA::cuda_driver
 )
 
 # Copy wrapper script and make executable
-add_custom_command(TARGET streaming_client_demo POST_BUILD
+add_custom_command(TARGET video_streaming_client_demo_cpp POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_wrapper.sh"
-        "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo_wrapper.sh"
-    COMMAND chmod +x "$<TARGET_FILE_DIR:streaming_client_demo>/streaming_client_demo_wrapper.sh"
+        "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo_wrapper.sh"
+        "$<TARGET_FILE_DIR:video_streaming_client_demo_cpp>/video_streaming_client_demo_wrapper.sh"
+    COMMAND chmod +x "$<TARGET_FILE_DIR:video_streaming_client_demo_cpp>/video_streaming_client_demo_wrapper.sh"
     COMMENT "Installing wrapper script with LD_LIBRARY_PATH"
 )
 
 # Copy config files to necessary locations
-add_custom_command(TARGET streaming_client_demo POST_BUILD
+add_custom_command(TARGET video_streaming_client_demo_cpp POST_BUILD
     # Copy to the binary directory (for local testing)
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml"
-        "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo.yaml"
+        "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.yaml"
+        "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client_demo.yaml"
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_replayer.yaml"
-        "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo_replayer.yaml"
+        "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo_replayer.yaml"
+        "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client_demo_replayer.yaml"
     # Copy to the build root directory (where holohub run executes)
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml"
-        "${CMAKE_BINARY_DIR}/streaming_client_demo.yaml"
+        "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.yaml"
+        "${CMAKE_BINARY_DIR}/video_streaming_client_demo.yaml"
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_replayer.yaml"
-        "${CMAKE_BINARY_DIR}/streaming_client_demo_replayer.yaml"
+        "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo_replayer.yaml"
+        "${CMAKE_BINARY_DIR}/video_streaming_client_demo_replayer.yaml"
     COMMENT "Copying config files"
 )
 
 # Set RPATH to prioritize bundled libraries over system libraries
 # BUILD_RPATH: Uses absolute path to NGC binaries in source tree (for development)
 # INSTALL_RPATH: Uses relative paths to find NGC binaries installed at <prefix>/lib
-set_target_properties(streaming_client_demo PROPERTIES
-    BUILD_RPATH "$<TARGET_FILE_DIR:streaming_client_demo>/lib:$<TARGET_FILE_DIR:streaming_client_demo>:${OPERATOR_CLIENT_DIR}"
+set_target_properties(video_streaming_client_demo_cpp PROPERTIES
+    BUILD_RPATH "$<TARGET_FILE_DIR:video_streaming_client_demo_cpp>/lib:$<TARGET_FILE_DIR:video_streaming_client_demo_cpp>:${OPERATOR_CLIENT_DIR}"
     INSTALL_RPATH "$ORIGIN/lib:$ORIGIN:$ORIGIN/../../../lib"
     BUILD_WITH_INSTALL_RPATH FALSE
     INSTALL_RPATH_USE_LINK_PATH FALSE
@@ -91,17 +89,17 @@ set_target_properties(streaming_client_demo PROPERTIES
 
 # Install application and dependencies into the install/ directory for packaging
 install(
-  TARGETS streaming_client_demo
+  TARGETS video_streaming_client_demo_cpp
   DESTINATION bin/video_streaming_client/cpp
 )
 
 install(
-  FILES streaming_client_demo.yaml streaming_client_demo_replayer.yaml
+  FILES video_streaming_client_demo.yaml video_streaming_client_demo_replayer.yaml
   DESTINATION bin/video_streaming_client/cpp
 )
 
 install(
-  FILES "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_wrapper.sh"
+  FILES "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo_wrapper.sh"
   DESTINATION bin/video_streaming_client/cpp
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
