--- a/applications/video_streaming/video_streaming_server/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_server/CMakeLists.txt
@@ -16,10 +16,10 @@
 cmake_minimum_required(VERSION 3.20)
 project(video_streaming_server LANGUAGES CXX)
 
-# Add C++ subdirectory
-add_subdirectory(cpp)
+if(HOLOHUB_BUILD_CPP)
+  add_subdirectory(cpp)
+endif()
 
-# Add Python subdirectory
 if(HOLOHUB_BUILD_PYTHON)
   add_subdirectory(python)
 endif()
