--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -137,8 +137,7 @@ add_holohub_application(vpi_stereo)
 
 add_holohub_application(video_deidentification)
 
-add_holohub_application(video_streaming DEPENDS
-                        OPERATORS video_streaming)
+add_subdirectory(video_streaming)
 
 add_holohub_application(webrtc_video_server)
 
