--- a/applications/video_streaming/video_streaming_client/python/CMakeLists.txt
+++ b/applications/video_streaming/video_streaming_client/python/CMakeLists.txt
@@ -13,67 +13,56 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Copy streaming_client_demo application file to both locations
-add_custom_target(python_streaming_client_demo ALL
+ # Copy video_streaming_client_demo application file to both locations
+add_custom_target(python_video_streaming_client_demo ALL
   COMMAND ${CMAKE_COMMAND} -E copy
-          "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.py"
-          "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo.py"
+          "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.py"
+          "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client_demo.py"
   COMMAND ${CMAKE_COMMAND} -E copy
-          "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.py"
-          "${CMAKE_BINARY_DIR}/streaming_client_demo.py"
-  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.py"
-  BYPRODUCTS "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo.py"
-             "${CMAKE_BINARY_DIR}/streaming_client_demo.py"
+          "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.py"
+          "${CMAKE_BINARY_DIR}/video_streaming_client_demo.py"
+  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.py"
+  BYPRODUCTS "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client_demo.py"
+             "${CMAKE_BINARY_DIR}/video_streaming_client_demo.py"
 )
 
 # Copy YAML configuration files if they exist
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.yaml")
   configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml"
-    "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo.yaml"
+    "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.yaml"
+    "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client_demo.yaml"
     COPYONLY
   )
 endif()
 
 # Copy replayer config
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_replayer.yaml")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo_replayer.yaml")
   configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_replayer.yaml"
-    "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo_replayer.yaml"
+    "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo_replayer.yaml"
+    "${CMAKE_CURRENT_BINARY_DIR}/video_streaming_client_demo_replayer.yaml"
     COPYONLY
   )
 endif()
 
-# Add testing for Python application
-if(BUILD_TESTING)
-  add_test(NAME streaming_client_demo_python_test
-           COMMAND python3 streaming_client_demo.py --help
-           WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-
-  set_tests_properties(streaming_client_demo_python_test PROPERTIES
-                       PASS_REGULAR_EXPRESSION "Streaming Client Demo"
-                       FAIL_REGULAR_EXPRESSION "Error;ERROR;Failed")
-endif()
-
 # Install Python application
 install(
-  FILES streaming_client_demo.py
+  FILES video_streaming_client_demo.py
   DESTINATION bin/video_streaming/python
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
 # Install configuration files
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo.yaml")
   install(
-    FILES streaming_client_demo.yaml
+    FILES video_streaming_client_demo.yaml
     DESTINATION bin/video_streaming/python
   )
 endif()
 
 # Install replayer config
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo_replayer.yaml")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/video_streaming_client_demo_replayer.yaml")
   install(
-    FILES streaming_client_demo_replayer.yaml
+    FILES video_streaming_client_demo_replayer.yaml
     DESTINATION bin/video_streaming/python
   )
 endif()
