--- a/operators/gstreamer/CMakeLists.txt
+++ b/operators/gstreamer/CMakeLists.txt
@@ -46,7 +46,6 @@ add_definitions(${GSTREAMER_APP_CFLAGS_OTHER})
 add_library(holoscan_gstreamer_bridge SHARED
   gst/buffer.cpp
   gst/caps.cpp
-  gst/guards.cpp
   gst/video_info.cpp
   gst_src_bridge.cpp
   gst_video_recorder_operator.cpp
@@ -106,7 +105,9 @@ install(TARGETS holoscan_gstreamer_bridge DESTINATION lib)
 install(FILES 
   gst/buffer.hpp
   gst/caps.hpp
-  gst/guards.hpp
+  gst/error.hpp
+  gst/memory.hpp
+  gst/message.hpp
   gst/object.hpp
   gst/video_info.hpp
     gst_src_bridge.hpp
