Fix Build Issue with OpenIGTLink 3D Slicer Application (#1213)
OpenIGTLink 3D Slicer Application (`openigtlink_3dslicer_python`) fails
to build in Python language. This PR fixes it by removing the
unnecessary data dependency link to C++ target while building for
Python.

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Chores**
  * Updated copyright year headers.
* Removed an unnecessary build dependency declaration to streamline the
build process.
* Consolidated and cleaned up build-script formatting for clearer,
single-block termination.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/openigtlink_3dslicer/python/CMakeLists.txt
+++ b/applications/openigtlink_3dslicer/python/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -30,6 +30,4 @@ if(HOLOHUB_DOWNLOAD_DATASETS)
     GXF_ENTITIES_FRAMERATE 30
     ALL
   )
-
-  add_dependencies(openigtlink_3dslicer colonoscopy_segmentation_data)
 endif()
