--- a/utilities/setup/Dockerfile.util
+++ b/utilities/setup/Dockerfile.util
@@ -15,6 +15,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Lightweight Dockerfile to run a single setup script adding dependencies
+# on top of a pre-existing project development image.
+
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE} AS base
 
