--- a/operators/advanced_network/advanced_network/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/CMakeLists.txt
@@ -48,9 +48,9 @@ target_include_directories(advanced_network_common
 )
 add_library(holoscan::advanced_network ALIAS advanced_network_common)
 target_link_libraries(advanced_network_common PUBLIC holoscan::core) # Remove if holoscan logger dependency removed
+# CUDA_SEPARABLE_COMPILATION ON
+# CUDA_RESOLVE_DEVICE_SYMBOLS ON
 set_target_properties(advanced_network_common PROPERTIES
-    CUDA_SEPARABLE_COMPILATION ON
-    CUDA_RESOLVE_DEVICE_SYMBOLS ON
     OUTPUT_NAME "holoscan_advanced_network"
     EXPORT_NAME "advanced_network"
 )
