Add pipeline visualization example.
This example demonstrates real-time visualization of data from
Holoscan applications using NATS messaging and web-based dashboards.
It showcases how to stream tensor data from a Holoscan pipeline
and visualize it dynamically in a browser.

Signed-off-by: Andreas Heumann <aheumann@nvidia.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -517,6 +517,26 @@
         },
         {
             "type": "shell",
+            "label": "Build pipeline_visualization",
+            "command": "./holohub",
+            "args": [
+                "build",
+                "pipeline_visualization",
+                "--build-type",
+                "debug",
+                "--local",
+                "--language",
+                "python"
+            ],
+            "options": {
+                "cwd": "${env:WORKSPACE_DIR}"
+            },
+            "group": "build",
+            "problemMatcher": [],
+            "detail": "CMake template build task"
+        },
+        {
+            "type": "shell",
             "label": "Build slang_simple",
             "command": "./holohub",
             "args": [
