--- a/operators/advanced_network/advanced_network/managers/gpunetio/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/managers/gpunetio/CMakeLists.txt
@@ -49,10 +49,11 @@ target_compile_definitions(${PROJECT_NAME}
     DOCA_ALLOW_EXPERIMENTAL_API
 )
 
+# CUDA_SEPARABLE_COMPILATION ON
+# CUDA_RESOLVE_DEVICE_SYMBOLS ON
+
 set_target_properties(${PROJECT_NAME}
   PROPERTIES
-    CUDA_SEPARABLE_COMPILATION ON
-    CUDA_RESOLVE_DEVICE_SYMBOLS ON
     CUDA_ARCHITECTURES "80;90"
 )
 
