Unit tests for C++ Holohub video streaming operators (#1188)
# Add C++ Unit Tests for Video Streaming Operators

## Overview

This PR adds C++ unit tests for all video streaming operators
(`video_streaming_client` and `video_streaming_server`), providing fast,
network-independent validation of operator functionality with **38
passing tests** and **100% success rate**.

**Note:** This PR follows the established unit testing pattern used by
the `gamma_correction` operator.

## What's Added

### Test Coverage

**38 unit tests** across all video streaming components:

#### 1. VideoStreamingClientOp Tests (13 tests)
- Basic initialization with various configurations
- Video resolution parameters (SD, HD, Full HD, 4K, 8K)
- Frame rate validation (15-120 FPS)
- Network configuration (localhost, various ports)
- Streaming mode validation (send-only, receive-only, bidirectional)
- Frame validation parameters
- Edge cases (minimum/maximum resolutions, port boundaries)
- Resource management (cleanup, multiple instances)
- Operator setup validation

#### 2. StreamingServerResource Tests (8 tests)
- Basic resource creation and configuration
- Custom port, resolution, and FPS parameters
- Streaming direction configuration (upstream, downstream,
bidirectional)
- Multi-instance mode
- Various resolutions (SD, HD, Full HD, 4K)
- Frame rate variations (15-120 FPS)
- Port number configurations
- Resource cleanup

#### 3. StreamingServerUpstreamOp Tests (7 tests)
- Basic operator initialization
- Custom video parameter overrides
- Video resolution parameters (SD, HD, Full HD, 4K)
- Frame rate parameters (15-120 FPS)
- Operator setup validation
- Shared resource configuration
- Multiple operators with shared resource
- Resource cleanup

#### 4. StreamingServerDownstreamOp Tests (7 tests)
- Basic operator initialization
- Custom video parameter overrides
- Video resolution parameters (SD, HD, Full HD, 4K)
- Frame rate parameters (15-120 FPS)
- Operator setup validation
- Resource cleanup

--- a/operators/video_streaming/video_streaming_client/CMakeLists.txt
+++ b/operators/video_streaming/video_streaming_client/CMakeLists.txt
@@ -17,7 +17,7 @@ cmake_minimum_required(VERSION 3.20)
 project(video_streaming_client)
 
 # Find Holoscan - use simple approach
-find_package(holoscan 3.2 REQUIRED CONFIG
+find_package(holoscan 3.5 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 
 # Set the StreamingClient directory (following server pattern)
@@ -284,4 +284,9 @@ message(STATUS "StreamingClient operator configuration complete with imported ta
 # Add Python bindings if requested
 if(HOLOHUB_BUILD_PYTHON)
     add_subdirectory(python)
+endif()
+
+# Add unit tests if testing is enabled
+if(BUILD_TESTING)
+    add_subdirectory(tests)
 endif()
