fix: correct INPUT path in add_python_tests to avoid path duplication
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/video_streaming/video_streaming_server/python/CMakeLists.txt
+++ b/operators/video_streaming/video_streaming_server/python/CMakeLists.txt
@@ -78,7 +78,7 @@ file(GENERATE
 if(BUILD_TESTING AND HOLOHUB_BUILD_PYTHON)
     include(add_python_tests)
     add_python_tests(
-        INPUT "${CMAKE_CURRENT_SOURCE_DIR}/tests"
+        INPUT "tests"
         WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
         PREFIX "video_streaming_server_pytest"
         PYTEST_ARGS "-v"
