--- a/operators/medical_imaging/requirements-runtime.txt
+++ b/operators/medical_imaging/requirements-runtime.txt
@@ -7,7 +7,7 @@ numpy>=1.21.6
 numpy-stl>=2.12.0
 Pillow>=8.0.0
 pydicom>=2.3.0
-PyPDF2>=2.11.1
+pypdf>=6.2.0
 scikit-image>=0.17.2
 SimpleITK>=2.0.0
 torch>=2.0.1
