--- a/applications/colonoscopy_segmentation/Dockerfile
+++ b/applications/colonoscopy_segmentation/Dockerfile
@@ -76,8 +76,7 @@ RUN if ! python3 -m pip --version >/dev/null 2>&1; then \
     ; fi
 
 RUN pip3 install holoscan cupy-cuda12x \
-    && chmod -R a+w /usr/local/lib/python3.12/dist-packages/holoscan-*.dist-info/ \
-    && chmod -R a+rw /usr/local/lib/python3.12/dist-packages/holoscan
+    && python3 -m site
 
 ########################################################
 # Build with AJA C++ requirements
