Address PR feedback
- Use simpler "python3 -c pass" to initiate post-install setup. Previous
  "python3 -m site" could be misleading, only first-time interpreter
  init is needed for .pth processing to run.
- Add `set -e` to guard against failures
- Add doc comment to explain purpose

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/colonoscopy_segmentation/Dockerfile
+++ b/applications/colonoscopy_segmentation/Dockerfile
@@ -75,8 +75,9 @@ RUN if ! python3 -m pip --version >/dev/null 2>&1; then \
         curl -sS https://bootstrap.pypa.io/get-pip.py | ${PYTHON_VERSION} \
     ; fi
 
-RUN pip3 install holoscan cupy-cuda12x \
-    && python3 -m site
+RUN set -e \
+    && pip3 install holoscan cupy-cuda12x \
+    && python3 -c "pass"  # dummy command to run wheel-axle-runtime post-installation setup
 
 ########################################################
 # Build with AJA C++ requirements
