convert options to modes
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/workflows/CMakeLists.txt
+++ b/workflows/CMakeLists.txt
@@ -20,3 +20,4 @@ set(HOLOSCAN_OPERATORS
         orsi_segmentation_preprocessor
 )
 add_holohub_application(ai_surgical_video DEPENDS OPERATORS ${HOLOSCAN_OPERATORS})
+add_holohub_application(surgical_agent)
