--- a/applications/adv_networking_bench/adv_networking_bench_default_tx_rx_hds.yaml
+++ b/applications/adv_networking_bench/adv_networking_bench_default_tx_rx_hds.yaml
@@ -100,7 +100,7 @@ bench_rx:
 bench_tx:
   interface_name: "tx_port" # Name of the TX port from the advanced_network config
   gpu_direct: true          # Set to true if using a GPU region for the Tx queues.
-  split_boundary: true         # Byte boundary where header and data is split, 0 if no split
+  split_boundary: true         # Whether header and data is split (Header to CPU, payload to GPU)
   batch_size: 10240
   payload_size: 1000
   header_size: 64
