feat: Add GStreamer video recorder with comprehensive sample application
- Implements GstVideoRecorderOperator for encoding video streams to file
- Adds RAII GStreamer wrapper classes (Buffer, Caps, Memory, etc.)
- Supports zero-copy tensor-to-buffer conversion for host/CUDA memory
- Auto-detects video parameters, encoders, parsers, and muxers
- Includes comprehensive sample app with animated test patterns
- Provides flexible CLI with encoder properties and format support
- Handles H.264/H.265 encoding with MP4/MKV container formats

Signed-off-by: Gil Shapira <gshapira@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -56,6 +56,8 @@ add_holohub_application(endoscopy_tool_tracking DEPENDS
                                   yuan_qcap
                                   vtk_renderer)
 
+add_subdirectory(gstreamer)
+
 add_subdirectory(h264)
 
 add_holohub_application(isaac_sim_holoscan_bridge)
